src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Shell/content/Views/Users/Details.cshtml.pp
@{
    ViewBag.Title = "User Details";
    Layout = "_AdminUserLayout.cshtml";
}
@model $rootnamespace$.Models.Users.UserViewModel

<div class="tab-content">
    <div class="tab-pane active" id="details">
        @Html.DisplayForModel("Bootstrap/Bootstrap.Table")
    </div>
</div>